# gc_tech_project

./: .gitignore  README.md  bio.txt  career_statistics.csv  chrome_output.html  docker-compose.yml  player_page.html
agent/: .gitignore  Dockerfile  main.py  requirements.txt
agent/live_updates_agent/: web_agent.py
agent/manager_agent/: manager_agent.py
agent/model/: load_model.py
agent/scrapers/: agent.py  scraper.py
agent/speech_to_text/: speech_to_text.py
agent/sports_agents/: .gitignore  pyproject.toml  requirements.txt
agent/sports_agents/src/sports_agents/: crew.py  main.py
agent/sports_agents/src/sports_agents/config/: agents.yaml  tasks.yaml
agents/: requirements.txt
agents/ai_agents/: agent.py  player_info.py  player_info_agent.py
agents/project/: main (2).py  main.py  pyproject.toml
auth_server/: Dockerfile  README (2).md  constants.ts  index (2).ts  index.ts  package (2).json  package-lock.json  package.json
auth_server/configs/: db_connection.ts
auth_server/controllers/: user_controllers.ts
auth_server/middleware/: auth_middleware.ts
auth_server/routes/: P_Routes.ts  UP_Routes.ts
auth_server/services/: db_functions.ts
backend/: constants.ts  fillmaker.js  package-lock.json  package.json
frontend/: .gitignore  Dockerfile  index (2).html  index.html  package (2).json  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
scrapers/: google_search.py  package-lock.json  package.json  requirements.txt  scraper.js  scraper.py
server/: .gitignore  app.py  main.py  requirements.txt  run_agent.py
(+81 files in other folders)
