[project]
name = "sports_agents"
version = "0.1.0"
description = "sports_agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
sports_agents = "sports_agents.main:run"
run_crew = "sports_agents.main:run"
train = "sports_agents.main:train"
replay = "sports_agents.main:replay"
test = "sports_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
